--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ background-color:white;
 .head{
 height:100px;
 background:linear-gradient(to right,#DD4C53 10%,#E25447 100%);
-width:1527px;
+width:1530px;
 margin-left:-8px;
 margin-top:-25px;
 padding-right:8px;
@@ -107,8 +107,425 @@ border-radius:4px;
   margin-top:20px;
   font-size:17px;
   }
+  @media (max-width:1489px){
+	  
+	  html,body{
+background-color:white;
+}
+.head{
+height:100px;
+background:linear-gradient(to right,#DD4C53 10%,#E25447 100%);
+width:1489px;
+margin-left:-8px;
+margin-top:-25px;
+padding-right:8px;
+}
+.head input{
+margin-left:1000px;
+margin-top:-100px;
+padding-left:13px;
+padding-right:13px;
+padding-top:13px;
+padding-bottom:6px;
+border:2px solid white;
+border-radius:4px;
+background-color:#E25349;
+color:White;
+}
+
+  }
+   @media (max-width:1349px){
+	  
+	  html,body{
+background-color:white;
+}
+.head{
+height:100px;
+background:linear-gradient(to right,#DD4C53 10%,#E25447 100%);
+width:1349px;
+margin-left:-8px;
+margin-top:-25px;
+padding-right:8px;
+}
+.head input{
+margin-left:850px;
+margin-top:-120px;
+padding-left:13px;
+padding-right:13px;
+padding-top:13px;
+padding-bottom:6px;
+border:2px solid white;
+border-radius:4px;
+background-color:#E25349;
+color:White;
+}
+
+  }
+   @media (max-width:1219px){
+	  
+	  html,body{
+background-color:white;
+}
+.head{
+height:100px;
+background:linear-gradient(to right,#DD4C53 10%,#E25447 100%);
+width:1219px;
+margin-left:-8px;
+margin-top:-25px;
+padding-right:8px;
+}
+.head input{
+margin-left:700px;
+margin-top:-120px;
+padding-left:13px;
+padding-right:13px;
+padding-top:13px;
+padding-bottom:6px;
+border:2px solid white;
+border-radius:4px;
+background-color:#E25349;
+color:White;
+}
+.lang select{
+margin-top:35px;
+padding-top:5px;
+padding-bottom:5px;
+color:#D9D9D9;
+border:0px white;
+margin-left:480px;
+font-size:19px;
+}
+img{
+margin-left:420px;
+margin-top:20px;
+height:113px;
+width:197px;
+}  
+button{
+background-color: DodgerBlue;
+  color: white;
+  font-size: 18px;
+  height:30px;
+  width:260px;
+  margin-top:10px;
+  text-align:left;
+  padding-left:21px;
+  border-radius:6px;
+  margin-left:391px;
+  border:0px solid DodgerBlue;
+  }
+  .or p{
+  margin-left:360px;
+  color:#d9d9d9;
+  font-size:20px;
+  }
+  .data input{
+  margin-left:340px;
+  margin-top:17px;
+  width:350px;
+text-align:center;
+height:26px;
+font-size:20px;
+border-radius:4px;
+  }
+  .data i{
+  margin-left:10px;
+  }
+  .data button{
+   color: white;
+  font-size: 18px;
+  height:38px;
+  width:98px;
+  margin-top:20px;
+  text-align:left;
+  padding-right:8px;
+  padding-left:14px;
+  border-radius:6px;
+  margin-left:472px;
+  border:0px solid DodgerBlue;
+  }
+  hr{
+  margin-top:40px;
+  border:2px solid #d9d9d9;
+  }
+  a{
+  text-decoration:none;
+  color:#0091D5;
+  font-size:20px;
+  margin-left:450px;
+  margin-top:15px;
+  }  
+  .foot a{
+  color:#555555;
+  font-weight:bold;
+  margin-left:401px;
+  margin-top:20px;
+  font-size:17px;
+  }
+
+  }
   
-   @media screen and (max-device-width : 540px){
+   @media (max-width:1024px) {
+	html, body
+{
+height:100%;
+overflow-x: hidden;
+margin-top:0px;
+margin-left:0px;
+margin-right:0px;
+}
+  .head{
+height:125px;
+background:linear-gradient(to right,#DD4C53 10%,#E25447 100%);
+width:1024px;
+padding-top:10px;
+display:flex;
+flex-wrap: wrap;
+}
+.head h2{
+color:White;
+padding-top:10px;
+font-family:Arial;
+font-size:35px;
+padding-left:30px;
+display:flex;
+}
+.head p{
+color:White;
+font-family:Arial; 
+font-size:29px;
+margin-top:81px;
+margin-left:-186px;
+padding-left:20px;
+}
+.head input{
+margin-left:810px;
+margin-top:-65px;
+padding-left:16px;
+padding-right:16px;
+padding-top:16px;
+padding-bottom:9px;
+border:2px solid white;
+border-radius:4px;
+font-size:29px;
+background-color:#E25349;
+color:White;
+display:flex;
+}
+.lang select{
+margin-top:20px;
+padding-top:5px;
+padding-bottom:5px;
+color:#D9D9D9;
+background-color:white;
+border:0px white;
+margin-left:413px;
+font-size:25px;
+display:flex;
+}
+img{
+margin-left:300px;
+margin-top:10px;
+height:100px;
+width:300px;
+display:flex;
+} 
+ button{
+background-color: DodgerBlue;
+  color: white;
+  font-size: 27px;
+  height:30px;
+  width:340px;
+  margin-top:18px;
+  text-align:left;
+  padding-left:30px;
+  border-radius:6px;
+  margin-left:273px;
+  border:0px solid DodgerBlue;
+  }
+  .or p{
+  margin-left:246px;
+  font-size:25px;
+  margin-top:23px;
+  color:#d9d9d9;
+  }
+  .data input{
+  margin-left:230px;
+  margin-top:7px;
+  width:400px;
+text-align:center;
+height:36px;
+font-size:20px;
+border-radius:4px;
+  }
+  .data i{
+	  font-size:17px;
+  margin-left:13px;
+  }
+.data button{
+   color: white;
+  font-size: 16px;
+  height:38px;
+  width:86px;
+  margin-top:25px;
+  text-align:left;
+  padding-right:8px;
+  padding-left:13px;
+  border-radius:6px;
+  margin-left:387px;
+  margin-bottom:70px;
+  border:0px solid DodgerBlue;
+  }
+  hr{
+  margin-top:-20px;
+  border:1px solid #d9d9d9;
+  }
+  a{
+  text-decoration:none;
+  color:#0091D5;
+  margin-left:357px;
+  margin-top:20px;
+  font-size:20px;
+  }  
+  .foot a{
+  color:#555555;
+  font-weight:bold;
+  margin-left:285px;
+  margin-top:20px;
+  font-size:22px;
+  }}  
+  
+  @media (max-width:768px) {
+	html, body
+{
+height:100%;
+overflow-x: hidden;
+margin-top:0px;
+margin-left:0px;
+margin-right:0px;
+}
+  .head{
+height:125px;
+background:linear-gradient(to right,#DD4C53 10%,#E25447 100%);
+width:768px;
+padding-top:10px;
+display:flex;
+flex-wrap: wrap;
+}
+.head h2{
+color:White;
+padding-top:10px;
+font-family:Arial;
+font-size:35px;
+padding-left:30px;
+display:flex;
+}
+.head p{
+color:White;
+font-family:Arial; 
+font-size:29px;
+margin-top:81px;
+margin-left:-181px;
+padding-left:20px;
+}
+.head input{
+margin-left:610px;
+margin-top:-65px;
+padding-left:16px;
+padding-right:16px;
+padding-top:16px;
+padding-bottom:9px;
+border:2px solid white;
+border-radius:4px;
+font-size:29px;
+background-color:#E25349;
+color:White;
+display:flex;
+}
+.lang select{
+margin-top:20px;
+padding-top:5px;
+padding-bottom:5px;
+color:#D9D9D9;
+background-color:white;
+border:0px white;
+margin-left:283px;
+font-size:25px;
+display:flex;
+}
+img{
+margin-left:190px;
+margin-top:10px;
+height:100px;
+width:300px;
+display:flex;
+} 
+ button{
+background-color: DodgerBlue;
+  color: white;
+  font-size: 27px;
+  height:30px;
+  width:340px;
+  margin-top:18px;
+  text-align:left;
+  padding-left:30px;
+  border-radius:6px;
+  margin-left:166px;
+  border:0px solid DodgerBlue;
+  }
+  .or p{
+  margin-left:140px;
+  font-size:25px;
+  margin-top:23px;
+  color:#d9d9d9;
+  }
+  .data input{
+  margin-left:130px;
+  margin-top:7px;
+  width:400px;
+text-align:center;
+height:36px;
+font-size:20px;
+border-radius:4px;
+  }
+  .data i{
+	  margin-top:3px;
+  margin-left:13px;
+  }
+.data button{
+   color: white;
+  font-size: 16px;
+  height:38px;
+  width:86px;
+  margin-top:25px;
+  text-align:left;
+  padding-right:8px;
+  padding-left:13px;
+  border-radius:6px;
+  margin-left:270px;
+  margin-bottom:70px;
+  border:0px solid DodgerBlue;
+  }
+  hr{
+  margin-top:-20px;
+  border:1px solid #d9d9d9;
+  }
+  a{
+  text-decoration:none;
+  color:#0091D5;
+  margin-left:250px;
+  margin-top:20px;
+  font-size:20px;
+  }  
+  .foot a{
+  color:#555555;
+  font-weight:bold;
+  margin-left:155px;
+  margin-top:20px;
+  font-size:22px;
+  }}  
+	
+   @media screen and (max-width : 540px){
 html, body
 {
 height:100%;
@@ -137,11 +554,11 @@ display:flex;
 color:White;
 font-family:Arial; 
 font-size:25px;
-margin-top:-21px;
-padding-left:20px;
+margin-top:75px;
+padding-left:35px;
 }
 .head input{
-margin-left:440px;
+margin-left:390px;
 margin-top:-65px;
 padding-left:16px;
 padding-right:16px;
@@ -186,8 +603,8 @@ background-color: DodgerBlue;
   border:0px solid DodgerBlue;
   }
   .or p{
-  margin-left:107px;
-  size:50px;
+  margin-left:100px;
+  font-size:18px;
   margin-top:3px;
   color:#d9d9d9;
   }
@@ -202,6 +619,7 @@ border-radius:4px;
   }
   .data i{
   margin-left:13px;
+  font-size:20px;
   }
 .data button{
    color: white;
@@ -263,11 +681,11 @@ display:flex;
 color:White;
 font-family:Arial; 
 font-size:19px;
-padding-left:20px;
+padding-left:65px;
 }
 .head input{
 margin-left:307px;
-margin-top:-50px;
+margin-top:-52px;
 padding-left:15px;
 padding-right:15px;
 padding-top:16px;
@@ -387,11 +805,11 @@ display:flex;
 color:White;
 font-family:Arial; 
 font-size:19px;
-padding-left:20px;
+padding-left:65px;
 }
 .head input{
 margin-left:307px;
-margin-top:-50px;
+margin-top:-60px;
 padding-left:15px;
 padding-right:15px;
 padding-top:16px;
@@ -435,7 +853,7 @@ background-color: DodgerBlue;
   border:0px solid DodgerBlue;
   }
   .or p{
-  margin-left:73px;
+  margin-left:65px;
   size:10px;
   margin-top:3px;
   color:#d9d9d9;
@@ -511,13 +929,13 @@ display:flex;
 color:White;
 font-family:Arial; 
 font-size:19px;
-padding-left:20px;
+padding-left:57px;
 }
 .head input{
-margin-left:286px;
-margin-top:-50px;
-padding-left:15px;
-padding-right:15px;
+margin-left:290px;
+margin-top:-60px;
+padding-left:13px;
+padding-right:13px;
 padding-top:16px;
 padding-bottom:8px;
 border:2px solid white;
@@ -559,7 +977,7 @@ background-color: DodgerBlue;
   border:0px solid DodgerBlue;
   }
   .or p{
-  margin-left:65px;
+  margin-left:50px;
   size:10px;
   margin-top:3px;
   color:#d9d9d9;
@@ -607,12 +1025,57 @@ border-radius:4px;
   font-size:17px;
   }}
    @media screen and (max-device-width : 411px) and (max-device-height: 731px){
+	   
+	   .head p{
+color:White;
+font-family:Arial; 
+font-size:19px;
+padding-left:67px;
+}
+.head input{
+margin-left:306px;
+margin-top:-60px;
+padding-left:15px;
+padding-right:15px;
+padding-top:16px;
+padding-bottom:8px;
+border:2px solid white;
+border-radius:4px;
+font-size:19px;
+background-color:#E25349;
+color:White;
+display:flex;
+}
+ .or p{
+  margin-left:62px;
+  size:10px;
+  color:#d9d9d9;
+  }
 	 hr{
   margin-top:80px;
   border:1px solid #d9d9d9;
   }}
   @media only screen and (max-device-width : 375px) and (max-device-height: 667px){
-
+.head p{
+color:White;
+font-family:Arial; 
+font-size:19px;
+margin-top:66px;
+padding-left:60px;
+}
+.head input{
+margin-left:287px;
+margin-top:-50px;
+padding-left:13px;
+padding-right:13px;
+padding-top:13px;
+padding-bottom:6px;
+border:2px solid white;
+border-radius:4px;
+background-color:#E25349;
+color:White;
+display:flex;
+}
   hr{
   margin-top:47px;
   border:1px solid #d9d9d9;
@@ -647,7 +1110,8 @@ display:flex;
 color:White;
 font-family:Arial; 
 font-size:16px;
-padding-left:30px;
+margin-top:60px;
+padding-left:86px;
 }
 .head input{
 margin-left:260px;
@@ -694,7 +1158,7 @@ background-color: DodgerBlue;
   border:0px solid DodgerBlue;
   }
   .or p{
-  margin-left:45px;
+  margin-left:32px;
   size:10px;
   color:#d9d9d9;
   }
@@ -770,13 +1234,13 @@ display:flex;
 color:White;
 font-family:Arial; 
 font-size:16px;
-padding-left:20px;
+padding-left:85px;
 }
 .head input{
 margin-left:235px;
 margin-top:-47px;
-padding-left:13px;
-padding-right:13px;
+padding-left:10px;
+padding-right:10px;
 padding-top:13px;
 padding-bottom:6px;
 border:2px solid white;
@@ -818,7 +1282,7 @@ background-color: DodgerBlue;
   }
   .or p{
   margin-left:45px;
-  size:10px;
+  font-size:16px;
   margin-top:3px;
   color:#d9d9d9;
   }
@@ -831,7 +1295,8 @@ height:26px;
 border-radius:4px;
   }
   .data i{
-  margin-left:10px;
+  margin-left:7px;
+  font-size:18px;
   }
 .data button{
    color: white;
@@ -894,18 +1359,19 @@ display:flex;
 .head p{
 color:White;
 font-family:Arial; 
-font-size:14px;
-padding-left:17px;
+font-size:15px;
+padding-left:70px;
 }
 .head input{
-margin-left:205px;
-margin-top:-40px;
-padding-left:11px;
-padding-right:11px;
+margin-left:219px;
+margin-top:-30px;
+padding-left:5px;
+padding-right:7px;
 padding-top:11px;
 padding-bottom:4px;
 border:2px solid white;
 border-radius:4px;
+font-size:15px;
 background-color:#E25349;
 color:White;
 display:flex;
